--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: faventur <faventur@student.42mulhouse.fr>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/10 17:55:49 by faventur          #+#    #+#              #
-#    Updated: 2022/04/29 17:41:51 by faventur         ###   ########.fr        #
+#    Updated: 2022/04/29 17:53:22 by faventur         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,9 +31,9 @@ SRCS_L	= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
 	ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
 	ft_lstmap.c
 
-SRCS_S	= ft_stacknew.c ft_newnode.c ft_stack_init.c ft_stackadd_top.c \
-	ft_stackadd_bottom.c ft_stackclear.c ft_stackinsert.c ft_stackdisplay.c \
-	ft_stacksize.c ft_assign_index.c
+SRCS_S	= ft_stacknew.c ft_newnode.c ft_stackadd_top.c \
+	ft_stackadd_bottom.c ft_stackclear.c ft_stackinsert.c \
+	ft_stacksize.c
 
 OBJS	= $(addprefix srcs/, ${SRCS:.c=.o})
 
