--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: faventur <faventur@student.42mulhouse.fr>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/10 17:55:49 by faventur          #+#    #+#              #
-#    Updated: 2022/05/03 18:30:41 by faventur         ###   ########.fr        #
+#    Updated: 2022/06/12 12:56:33 by faventur         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,21 +22,28 @@ SRCS	= ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
 	ft_striter.c ft_striteri.c ft_strmap.c ft_strmapi.c ft_putchar.c \
 	ft_putstr.c ft_putendl.c ft_putnbr.c ft_putchar_fd.c ft_putstr_fd.c \
 	ft_putendl_fd.c ft_putnbr_fd.c ft_putnbr_base.c ft_sort_int_tab.c \
-	ft_power.c ft_binary2char.c ft_strtolol.c ft_puterror.c \
-	ft_printf.c ft_printf_basic.c ft_printf_utils.c get_next_line.c
+	ft_sort_chartab.c ft_chartab_len.c ft_power.c ft_binary2char.c \
+	ft_strtolol.c ft_strstrbool.c ft_puterror.c ft_delete.c \
+	ft_arr_freer.c ft_printf.c ft_printf_basic.c ft_printf_utils.c \
+	get_next_line.c
 
 SRCSB	= get_next_line_bonus.c
 
 SRCS_L	= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
 	ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
-	ft_lstmap.c
+	ft_lstsort.c ft_lstmap.c ft_lst_remove_if.c
 
 SRCS_S	= ft_stacknew.c ft_newnode.c ft_stackadd_top.c \
 	ft_stackadd_bottom.c ft_stackdelone.c ft_stackclear.c \
-	ft_stackinsert.c ft_stackiter.c ft_stacksize.c
+	ft_stackinsert.c ft_stackiter.c ft_stacksize.c ft_stacksort.c \
+	ft_stackiter_if.c ft_stack_remove_if.c ft_create_chartab.c
 
 SRCS_Q	= ft_newqueue.c ft_newqelem.c ft_q_init.c ft_enqueue.c \
 	ft_dequeue.c ft_q_iter.c
+
+SRCS_BT	= btree_create_node.c btree_apply_prefix.c btree_apply_infix.c \
+	btree_apply_suffix.c btree_insert_data.c btree_search_item.c \
+	btree_level_count.c ft_btree_clear.c
 
 OBJS	= $(addprefix srcs/, ${SRCS:.c=.o})
 
@@ -47,6 +54,8 @@ OBJS_L	= $(addprefix lists/, ${SRCS_L:.c=.o})
 OBJS_S	= $(addprefix stacks/, ${SRCS_S:.c=.o})
 
 OBJS_Q	= $(addprefix queues/, ${SRCS_Q:.c=.o})
+
+OBJS_BT	= $(addprefix btrees/, ${SRCS_BT:.c=.o})
 
 NAME	= libft.a
 
@@ -70,8 +79,11 @@ stacks:		${NAME} ${OBJS_S}
 queues:		${NAME} ${OBJS_Q}
 			ar -rcs ${NAME} ${OBJS_Q}
 
+btrees:		${NAME} ${OBJS_BT}
+			ar -rcs ${NAME} ${OBJS_BT}
+
 clean:
-			rm -f ${OBJS} ${OBJSB} ${OBJS_L} ${OBJS_S} ${OBJS_Q}
+			rm -f ${OBJS} ${OBJSB} ${OBJS_L} ${OBJS_S} ${OBJS_Q} ${OBJS_BT}
 
 fclean:		clean
 			rm -f ${NAME}
